--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,9 @@ PORT=4000
 
 # MONGODB
 MONGODB_URI=mongodb+srv://ibrahimmaqsood:shopmanagementsystem@cluster0.w5l9nzz.mongodb.net/shopmanagementsystem?retryWrites=true&w=majority&appName=Cluster0
+
+# JWT SECRET
+JWT_SECRET=mySuper$ecretKey123!
+
+
+NODE_ENV=development
