Complete setup of cloudinary

--- a/Backend/.env
+++ b/Backend/.env
@@ -9,3 +9,8 @@ JWT_SECRET=mySuper$ecretKey123!
 
 
 NODE_ENV=development
+
+# CLOUDINARY 
+CLOUDINARY_CLOUD_NAME=db8tkk4bq
+CLOUDINARY_API_KEY=677829576428218
+CLOUDINARY_API_SECRET=lFYnF5-GE83gCnnVZbmzcW2q0Mw
