--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.179.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
