Wroking on registration page css

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,8 +2,8 @@
 PORT=4000
 
 # MONGODB
-MONGODB_URI=mongodb+srv://ibrahimmaqsood:shopmanagementsystem@cluster0.w5l9nzz.mongodb.net/shopmanagementsystem?retryWrites=true&w=majority&appName=Cluster0
-
+# MONGODB_URI=mongodb+srv://ibrahimmaqsood:shopmanagementsystem@cluster0.w5l9nzz.mongodb.net/shopmanagementsystem?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://muhammadibrahimibnmaqsood_db_user:muhammadsaad@cluster0.uy71gzh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # JWT SECRET
 JWT_SECRET=mySuper$ecretKey123!
 
