--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
